# multithreaded-webscraper

./: .gitignore  Cargo.toml  README.md  diagram.txt
src/: jobs.rs  main.rs  utils.rs
src/webscraper/: mod.rs  tests.rs
