[package]
name = "webscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
crossbeam-channel = "0.5.15"
reqwest = "0.12.15"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
soup = "0.5.1"
threadpool = "1.8.1"
tokio = {version ="1.44.2" ,features = ["macros", "rt-multi-thread"] }
